--- a/app/src/main/res/drawable/custom_btn_explore.xml
+++ b/app/src/main/res/drawable/custom_btn_explore.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="@color/color_blue50" android:endColor="@color/white">
+    <solid android:color="@color/color_blue50"/>
 
-    </gradient>
     <corners android:radius="8dp"/>
 
 </shape>
