--- a/app/src/main/res/layout/receipt_has_been_uploaded.xml
+++ b/app/src/main/res/layout/receipt_has_been_uploaded.xml
@@ -29,7 +29,7 @@
         android:textColor="@color/black"
         android:textSize="@dimen/font_title_content"
         android:textAlignment="center"
-        android:text="@string/Receipt_uploaded_successfully"
+        android:text="@string/yey_uploaded_successfully"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_large"
-        android:text="@string/You_are_heading"
+        android:text="@string/you_are_heading"
         android:textSize="@dimen/font_regular"
         android:fontFamily="@font/monbold"
         android:textColor="@color/color_gray4"
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_large"
-        android:text="@string/_9_juni_2021"
+        android:text="@string/_9_juni_2021_5_08_pm"
         android:fontFamily="@font/monbold"
         android:textColor="@color/black"
         android:textSize="@dimen/font_small"
