--- a/app/src/main/res/layout/activity_wishlist_empty.xml
+++ b/app/src/main/res/layout/activity_wishlist_empty.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".receipt_empty">
+    tools:context=".ReceiptEmptyActivity">
 
     <ImageView
         android:id="@+id/img_view"
@@ -26,7 +26,7 @@
         android:layout_marginTop="@dimen/spacing_smaller"
         android:fontFamily="@font/monbold"
         android:gravity="center"
-        android:text="@string/text_your_wishlist_is_empty"
+        android:text="@string/tv_your_wishlist_is_empty"
         android:textColor="@color/color_black"
         android:textSize="@dimen/font_title_content"
         app:layout_constraintEnd_toEndOf="@+id/img_view"
@@ -40,7 +40,7 @@
         android:layout_marginTop="@dimen/spacing_smaller"
         android:gravity="center"
         android:fontFamily="@font/monreguler"
-        android:text="@string/text_tap_here"
+        android:text="@string/tv_tap_heart_button_to_start_saving_your_favorite_item"
         app:layout_constraintEnd_toEndOf="@+id/yt_wishlist"
         app:layout_constraintStart_toStartOf="@+id/yt_wishlist"
         app:layout_constraintTop_toBottomOf="@+id/yt_wishlist" />
@@ -52,7 +52,7 @@
         android:layout_marginEnd="@dimen/spacing_regular"
         android:background="@drawable/custom_btn_wishlist"
         android:fontFamily="@font/monmedium"
-        android:text="@string/text_find_product"
+        android:text="@string/tv_find_product"
         android:textAllCaps="false"
         android:layout_marginBottom="@dimen/spacing_giant_more"
         android:textColor="@color/color_white"
