add layout wishlist

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -16,15 +16,25 @@
     <dimen name="rad_large">15dp</dimen>
 
     <!-- Spacing Between Two Views -->
+    <dimen name="spacing_big">210dp</dimen>
+    <dimen name="spacing_big_more">240dp</dimen>
     <dimen name="spacing_huger">120dp</dimen>
+    <dimen name="spacing_huger_2">130dp</dimen>
+    <dimen name="spacing_huger_3">135dp</dimen>
+    <dimen name="spacing_huger_4">165dp</dimen>
+    <dimen name="spacing_medium_huger">117dp</dimen>
     <dimen name="spacing_larger">60dp</dimen>
     <dimen name="spacing_giant_more">110dp</dimen>
+    <dimen name="spacing_giant_three">100dp</dimen>
     <dimen name="spacing_giant_two">90dp</dimen>
+    <dimen name="spacing_giant_one">80dp</dimen>
     <dimen name="spacing_giant">70dp</dimen>
     <dimen name="spacing_huge_slight">56dp</dimen>
+    <dimen name="spacing_huge_medium">50dp</dimen>
     <dimen name="spacing_huge">40dp</dimen>
     <dimen name="spacing_large">24dp</dimen>
     <dimen name="spacing_large_med">32dp</dimen>
+    <dimen name="spacing_regular_med">18dp</dimen>
     <dimen name="spacing_regular">16dp</dimen>
     <dimen name="spacing_normal_quarter">12dp</dimen>
     <dimen name="spacing_small">10dp</dimen>
