--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -24,7 +24,7 @@
         android:layout_marginStart="@dimen/spacing_regular"
         android:layout_marginEnd="@dimen/spacing_regular"
         android:fontFamily="@font/monsemibolld"
-        android:text="@string/grill_pan_jumbo_new"
+        android:text="@string/text_grill_pan_jumbo_new"
         android:textColor="@color/color_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img_teflon"
@@ -36,7 +36,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/spacing_tiny"
         android:fontFamily="@font/monmedium"
-        android:text="@string/_50_000_points"
+        android:text="@string/text_point"
         android:textColor="@color/color_blue50"
         android:textSize="@dimen/font_small"
         app:layout_constraintBottom_toBottomOf="@+id/img_teflon"
@@ -50,7 +50,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_normal_quarter"
         android:fontFamily="@font/monmedium"
-        android:text="@string/move_to_wishlist"
+        android:text="@string/text_move"
         android:textColor="@color/color_cmyk"
         android:textSize="@dimen/font_small"
         app:layout_constraintEnd_toStartOf="@id/img_lineup"
@@ -143,7 +143,7 @@
         android:layout_marginStart="@dimen/spacing_large"
         android:layout_marginEnd="@dimen/spacing_regular"
         android:fontFamily="@font/monsemibolld"
-        android:text="@string/handy_steamer"
+        android:text="@string/text_handy_steamer"
         android:textColor="@color/color_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img_steam"
@@ -155,8 +155,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/spacing_tiny"
         android:fontFamily="@font/monmedium"
-        android:text="@string/_60_000_points"
-        android:textColor="@color/color_blue50"
+        android:text="@string/text_60_000_points"        android:textColor="@color/color_blue50"
         android:textSize="@dimen/font_small"
         app:layout_constraintBottom_toBottomOf="@+id/img_steam"
         app:layout_constraintEnd_toEndOf="@+id/tv_handy"
@@ -169,7 +168,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_normal_quarter"
         android:fontFamily="@font/monmedium"
-        android:text="@string/move_to_wishlist"
+        android:text="@string/text_move"
         android:textColor="@color/color_cmyk"
         android:textSize="@dimen/font_small"
         app:layout_constraintEnd_toStartOf="@id/img_lineup1"
@@ -261,7 +260,7 @@
         android:layout_marginStart="@dimen/spacing_large"
         android:layout_marginEnd="@dimen/spacing_regular"
         android:fontFamily="@font/monsemibolld"
-        android:text="@string/voucher_digital_kalcare_com_50_000"
+        android:text="@string/text_voucher_digital"
         android:textColor="@color/color_black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/img_voucher"
@@ -273,7 +272,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="@dimen/spacing_tiny"
         android:fontFamily="@font/monmedium"
-        android:text="@string/_50_000_points"
+        android:text="@string/text_point"
         android:textColor="@color/color_blue50"
         android:textSize="@dimen/font_small"
         app:layout_constraintBottom_toBottomOf="@+id/img_voucher"
@@ -287,7 +286,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/spacing_normal_quarter"
         android:fontFamily="@font/monmedium"
-        android:text="@string/move_to_wishlist"
+        android:text="@string/text_move"
         android:textColor="@color/color_cmyk"
         android:textSize="@dimen/font_small"
         app:layout_constraintEnd_toStartOf="@id/img_lineup2"
@@ -357,7 +356,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/spacing_large"
         android:fontFamily="@font/monsemibolld"
-        android:text="@string/total_points"
+        android:text="@string/text_total_points"
         android:textColor="@color/color_black"
         android:textSize="@dimen/font_large_one"
         app:layout_constraintBottom_toTopOf="@+id/btn_next"
@@ -369,7 +368,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/spacing_large"
         android:fontFamily="@font/monsemibolld"
-        android:text="@string/_160_000"
+        android:text="@string/number_160_000"
         android:textColor="@color/color_blue50"
         android:textSize="@dimen/font_large_one"
         app:layout_constraintBottom_toTopOf="@+id/btn_next"
